--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@ h1{
     text-shadow: -1px 1px #bbb,-2px 2px #bbb ,-3px 3px #bbb ,-4px 4px #bbb , 
     -5px 5px #bbb,-6px 6px #bbb;
 }
-h2,p,table{
+h2,p,table,dl{
     text-align: center;
 }
-table {
+table{
     border-collapse: collapse;
     margin-left:auto; 
 margin-right:auto;
@@ -24,3 +24,6 @@ margin-right:auto;
 
   }
   tr:nth-child(even) {background-color: #f2f2f2;}
+
+a {  border: 1px #A498BD solid; color: #4D2078; clip:  height; background-color: #EEEBFF; height: 20px; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; width: 130px}
+a:hover {  border: 1px #605080 solid; color: #9900CC; clip:  height; background-color: #BDAAE2; height: 20px; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; width: 130px}
